force-app/main/default/objects/Gong__Call_Participant__c/Gong__Call_Participant__c.object-meta.xml
<CustomObject>
    <label>Participant</label>
    <nameField>
        <displayFormat>GCP-{0000000}</displayFormat>
        <label>Call Participant ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>