force-app/main/default/objects/Gong__Call_Participant__c/fields/Gong__Contact_Participant__c.field-meta.xml
<CustomField>
    <fullName>Gong__Contact_Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Participants</relationshipLabel>
    <relationshipName>Call_Contact_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>