force-app/main/default/objects/Gong__Call_Participant__c/fields/Gong__Gong_Call__c.field-meta.xml
<CustomField>
    <fullName>Gong__Gong_Call__c</fullName>
    <label>Gong Conversation</label>
    <referenceTo>Gong__Gong_Call__c</referenceTo>
    <relationshipLabel>Participants</relationshipLabel>
    <relationshipName>Call_Participants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>