force-app/main/default/objects/Gong__Call_Participant__c/fields/Gong__Lead_Participant__c.field-meta.xml
<CustomField>
    <fullName>Gong__Lead_Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Participants</relationshipLabel>
    <relationshipName>Call_Lead_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>