force-app/main/default/objects/Gong__Call_Participant__c/fields/Gong__Methods__c.field-meta.xml
<CustomField>
    <fullName>Gong__Methods__c</fullName>
    <label>Participant Methods</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attendee</fullName>
            </value>
            <value>
                <fullName>Invitee</fullName>
            </value>
            <value>
                <fullName>Speaker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>