force-app/main/default/objects/Gong__Call_Participant__c/fields/Gong__Participant_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Gong__Participant_Phone_Number__c</fullName>
    <label>Participant Phone</label>
    <type>Phone</type>
</CustomField>