force-app/main/default/objects/Gong__Call_Participant__c/fields/Gong__User_Participant__c.field-meta.xml
<CustomField>
    <fullName>Gong__User_Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Call_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>